<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="pref_screenposition_default" translatable="false">0</string>
  <string name="pref_coloroptions_default" translatable="false">0</string>

  <string name="app_name">What Color is it</string>
  <string name="action_settings">Settings</string>
  <string name="pref_screenposition">Screen Position</string>
  <string name="pref_coloroptions">Color options</string>
  <string name="show_clock">Show Clock</string>


</resources>
